--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -5,6 +5,9 @@ console ansible_user=mosipuser
 [nginxserver]
 console ansible_user=mosipuser  
 
+[nfsserver]
+console ansible_user=mosipuser  
+
 # All k8s clusters
 [clusters:children]  
 mzcluster
