--- a/.github/workflows/mosip_repo_scanner.yml
+++ b/.github/workflows/mosip_repo_scanner.yml
@@ -5,15 +5,15 @@ name: CI
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 
-on:
-  schedule:
-    - cron: '0 */24 * * *'
-
 #on:
-#  push:
-#    branches: [ master ]
-#  pull_request:
-#    branches: [ master ]
+#  schedule:
+#    - cron: '0 */24 * * *'
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -37,7 +37,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip3 install -y truffleHog3
+          pip3 install truffleHog3
 
       # Create List of all repos
       - name: Create repo list
