added os hardening module

--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -32,3 +32,10 @@ dmzmaster ansible_user=root
 [dmzworkers]
 dmzworker0 ansible_user=root 
 
+# Openscap Scanning hosts
+[scancluster:children]
+mzcluster
+dmzcluster
+console1
+[console1]
+console ansible_user=root
