--- a/deployment/sandbox-v2/playbooks/env.yml
+++ b/deployment/sandbox-v2/playbooks/env.yml
@@ -14,11 +14,11 @@
      - {role: keycloak-init, tags: [keycloak-init]}  
 
 # Ingress controller on DMZ
-#- hosts: console
-#  gather_facts: true
-#  vars:
-#    kube_config: '{{dmz_kube_config}}'  # Deploy all these on mz cluster
-#  roles:
-#     # Base MOSIP infra
-#     - {role: helm, install_name: 'ingress-nginx', helm_chart: '{{charts_root}}/ingress-nginx', tags: [dmz-ingress]}
+- hosts: console
+  gather_facts: true
+  vars:
+    kube_config: '{{dmz_kube_config}}'  # Deploy all these on mz cluster
+  roles:
+     # Base MOSIP infra
+     - {role: helm, install_name: 'ingress-nginx', helm_chart: '{{charts_root}}/ingress-nginx', tags: [dmz-ingress]}
 
