--- a/deployment/sandbox-v2/helm/charts/pms/templates/misp-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/misp-dep.yaml
@@ -27,6 +27,7 @@ spec:
       containers:
       - name: {{ .Values.services.misp.serviceName }} 
         image: {{ .Values.services.misp.dockerImage }}:{{ .Values.services.misp.dockerTag }} 
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
