--- a/deployment/sandbox-v2/helm/charts/pms/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/values.yaml
@@ -10,6 +10,7 @@ artifactoryUrl: http://13.71.87.138:8040
 probe:
   initialDelay: 30  # Seconds
   period: 30 # Seconds
+imagePullPolicy: Always
 services:
   misp: 
     serviceName: pms-misp-service
