--- a/deployment/sandbox-v2/roles/config-repo/files/properties/resident-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/resident-mz.properties
@@ -66,6 +66,6 @@ resident.machine.id=10001
 
 #----------------------config data---------------------
 resident.datetime.pattern=yyyy-MM-dd'T'HH:mm:ss.SSS'Z'
-auth.types.allowed=demo,bio-FIR,bio-IIR,bio-FACE
+auth.types.allowed=demo,bio-Finger,bio-Iris,bio-FACE
 
 resident.identityjson=registration-processor-identity.json
