--- a/deployment/sandbox-v2/helm/charts/nfs-client/templates/nfs-sc.yaml
+++ b/deployment/sandbox-v2/helm/charts/nfs-client/templates/nfs-sc.yaml
@@ -3,5 +3,7 @@ kind: StorageClass
 metadata:
   name: nfs-storage
 provisioner: mosip-nfs # or choose another name, must match deployment's env PROVISIONER_NAME'
+reclaimPolicy: Retain
+volumeBindingMode: Immediate
 parameters:
   archiveOnDelete: "false"
