--- a/deployment/sandbox-v2/helm/charts/postgres/templates/pg-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/postgres/templates/pg-svc.yaml
@@ -11,5 +11,5 @@ spec:
   type: NodePort
   ports:
     - port: 80 
-      targetPort: {{ .Values.containerPort }}
+      targetPort: {{ .Values.docker.containerPort }}
       nodePort: {{ .Values.nodePort }}
