--- a/deployment/sandbox-v2/playbooks/nfs.yml
+++ b/deployment/sandbox-v2/playbooks/nfs.yml
@@ -8,6 +8,6 @@
   roles:
     - {role: nfs-server}
 
-- hosts: console
+- hosts: console # Kubernetes cluster client to access NFS
      - {role: helm, install_name: 'nfs-client', helm_chart: '{{charts_root}}/nfs-client', tags: [nfs-client]}
 
