--- a/deployment/sandbox-v2/playbooks/postgres.yml
+++ b/deployment/sandbox-v2/playbooks/postgres.yml
@@ -3,7 +3,7 @@
 #
 #
 #-# Create folder on nfs 
-- hosts: console 
+- hosts: nfsserver
   tasks:
     - {name: 'Create folder', file: {name: '{{postgres.nfs_path}}', state: directory}, become: yes}
 
