--- a/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pv.yaml
+++ b/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pv.yaml
@@ -2,24 +2,12 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: {{ .Values.pv.name }} 
-  labels:
-    name: {{ .Values.pv.name }} 
 spec:
-  capacity:
-    storage: {{ .Values.pv.size }}  
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain # Only this policy supported for this type of PV 
   storageClassName: {{ .Values.sc.name }} 
-  local:
-    path: {{ .Values.localStorage.path }} 
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - {{ .Values.localStorage.hostname }} 
-
+  capacity:
+    storage: {{ .Values.pv.size }}
+  accessModes:
+    - ReadWriteOnce
+  nfs:
+    server:  {{ .Values.nfs.server }}
+    path: {{ .Values.nfs.path }} 
