--- a/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pvc.yaml
+++ b/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pvc.yaml
@@ -2,17 +2,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ .Values.pvc.name }}
-  labels:
-    app: {{ .Values.pvc.name }} 
+  name: {{ .Values.pvc.name }} 
 spec:
-  storageClassName: {{ .Values.sc.name }}
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.pv.size }}  # Same as pv
-  selector:
-    matchLabels:
-      name: {{ .Values.pv.name }} 
-
+      storage: {{ .Values.pvc.size }} 
