--- a/deployment/sandbox-v2/helm/charts/config-server/templates/config-svc.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/templates/config-svc.yaml
@@ -7,5 +7,5 @@ spec:
   selector:
     app: {{ .Values.name }}
   ports:
-    - port: {{ .Values.servicePort }} 
-      targetPort: {{ .Values.containerPort }}
+    - port: {{ .Values.docker.servicePort }} 
+      targetPort: {{ .Values.docker.containerPort }}
