--- a/deployment/sandbox-v2/helm/charts/config-server/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/values.yaml
@@ -1,18 +1,26 @@
 namespace: default
 name: config-server  # Will be used as service name too
-dockerImage: mosipid/sandbox-config-server
-dockerTag: 1.0.5
+docker:
+  image: mosipid/sandbox-config-server
+  tag: 1.0.5
+  containerPort: 51000
+  servicePort: 80
 jarName: kernel-config-server # Without .jar. Used locally for Docker
 component: config-server
-repoMountPath: /var/lib/  
-gitRepoName: config_repo
-repoUri: /var/lib/config_repo  # repoMountPath + gitRepoName
-containerPort: 51000
-pvName: config-server-local-storage
-pvSize: 10Mi
-pvHostname: mzworker0  
-pvcName: config-repo-pv-claim
-pvcSize: 10Mi # Should not exceed pv size
-servicePort: 80
+gitrepo:
+  name: config_repo
+  mountPath: /var/lib/config_repo
+  uri: /var/lib/config_repo  # repoMountPath + gitRepoName
+pv:
+  name: config-server-pv
+  size: 10Mi
+pvc:
+  name: config-server-pvc
+  size: 10Mi # Should not exceed pv size
 ingressPath: /config
-configRepoNodeDir: /mnt/mosip_data/ # Should match with config-repo path
+sc:
+  name: manual
+
+nfs:
+  server: console
+  path: /srv/nfs/mosip/config_repo # Should match with config_repo path
