--- a/deployment/sandbox-v2/roles/config-repo/tasks/templates.yml
+++ b/deployment/sandbox-v2/roles/config-repo/tasks/templates.yml
@@ -5,13 +5,13 @@
 # pattern.  If found we assumed template replacement is needed.
 
 - name: Make a judgement if file is in still template form
-  command: 'grep -P ^.*\{\{.*?\}\}.*$ {{config_repo_node_path}}/{{prop_file}}'
+  command: 'grep -P ^.*\{\{.*?\}\}.*$ {{config_repo.path}}/{{prop_file}}'
   ignore_errors: yes
   register: out
   
 - name: Update deployment specific properties, but don't overwrite 
   template:
     src: '{{install_root}}/roles/config-repo/files/properties/{{prop_file}}'
-    dest: '{{config_repo_node_path}}/{{prop_file}}'
+    dest: '{{config_repo.path}}/{{prop_file}}'
   when: out.rc == 0  # file is still in template mode 
    
