--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-dep.yaml
@@ -34,5 +34,5 @@ spec:
       volumes:
       - name: landing-zone
         persistentVolumeClaim:
-          claimName: {{ .Values.services.pktserver.pvcName }}
+          claimName: {{ .Values.services.pktserver.pvc.name }}
 
