--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
@@ -59,8 +59,8 @@ spec:
  #         periodSeconds: {{ .Values.probe.period }} 
         volumeMounts:
         - name: landing-zone
-          mountPath: {{ .Values.landing.path }}
+          mountPath: {{ .Values.landing.mountPath }}
       volumes:
       - name: landing-zone
         persistentVolumeClaim:
-          claimName: {{ .Values.landing.pvcName }}
+          claimName: {{ .Values.landing.pvc.name }}
