--- a/deployment/sandbox-v2/playbooks/regproc.yml
+++ b/deployment/sandbox-v2/playbooks/regproc.yml
@@ -2,12 +2,9 @@
 #
 
 # Prep
-- hosts: dmzworker0  # One of the dmz nodes is chosen for packet landing and archival
-  gather_facts: true
-  vars:   
-    kube_config: '{{dmz_kube_config}}'  # Deploy all these on dmz cluster
+- hosts: nfsserver
   tasks:
-    - {name: 'Create landing folder', file: {name: '{{regproc.landing_folder}}', state: directory}}
+    - {name: 'Create landing folder', file: {name: '{{regproc.landing_folder}}', state: directory}, become: yes}
 
 # Run DMZ regproc
 - hosts: console
@@ -19,13 +16,13 @@
   roles:
     - {role: helm, tags: [dmzregproc]} 
 
-# Run MZ regproc
-- hosts: console
-  gather_facts: true
-  vars:   
-    kube_config: '{{mz_kube_config}}' 
-    helm_chart: '{{charts_root}}/regproc'
-    install_name: regproc 
-  roles:
-    - {role: helm, tags: [regproc]} 
+## Run MZ regproc
+#- hosts: console
+#  gather_facts: true
+#  vars:   
+#    kube_config: '{{mz_kube_config}}' 
+#    helm_chart: '{{charts_root}}/regproc'
+#    install_name: regproc 
+#  roles:
+#    - {role: helm, tags: [regproc]} 
  
