--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-pv.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/pktserver-pv.yaml
@@ -1,24 +1,16 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ .Values.services.pktserver.pvName }} 
+  name: {{ .Values.services.pktserver.pv.name }} 
   labels:
-    name: {{ .Values.services.pktserver.pvName }} 
+    name: {{ .Values.services.pktserver.pv.name }} 
 spec:
-  capacity:
-    storage: {{ .Values.services.pktserver.pvSize }} 
-  volumeMode: Filesystem
-  accessModes:
-  - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Retain # Only this policy supported for this type of PV 
   storageClassName: {{ .Values.storageClass }}
-  local:
-    path: {{ .Values.services.pktserver.pvPath }}
-  nodeAffinity:
-    required:
-      nodeSelectorTerms:
-      - matchExpressions:
-        - key: kubernetes.io/hostname
-          operator: In
-          values:
-          - {{ .Values.services.pktserver.pvHostName }} # The node on which pv_path directory exists
+  capacity:
+    storage: {{ .Values.services.pktserver.pv.size }} 
+  accessModes:
+   - ReadOnlyMany
+  nfs:
+    server: {{ .Values.services.pktserver.nfs.server }}
+    path: {{ .Values.services.pktserver.nfs.path }}
+  
