--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-mz.properties
@@ -95,7 +95,7 @@ kernel.auth.contextpath=authmanager
 kernel.prid.env=http://kernel-pridgenerator-service
 kernel.prid.contextpath=pridgenerator
 
-kernel.syncdata.env=https://sandboxv2.southindia.cloudapp.azure.com
+kernel.syncdata.env=http://kernel-syncdata-service
 kernel.syncdata.version=v1/syncdata
 latestidschema.service.contextpath=latestidschema
 mosip.preregistration.id-schema=${kernel.syncdata.env}/${kernel.syncdata.version}/${latestidschema.service.contextpath}
