IDA properties updated.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/id-authentication-mz.properties
@@ -41,11 +41,23 @@ hibernate.cache.use_query_cache=false
 hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
 spring.datasource.initialization-mode=never
-
+hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 application.env.local=false
 
+######################### Key Generator configurations #############################
+mosip.ida.database.driverClassName=org.postgresql.Driver
+mosip.ida.database.schema=ida
+mosip.ida.database.url=jdbc:postgresql://${mosip.ida.database.hostname}:${mosip.ida.database.port}/mosip_ida
+ida.key.generate.count=10000
+ida.keygenerator.uin.salt.modulo=1000
+
 ######################### ID-Authentication Application Configurations ##############
+# Application id for signing key(capital letters)
+ida.sign.applicationid=IDA
+# Reference id for signing key(capital letters)
+ida.sign.refid=SIGN
 # Application ID of IDA
 application.id=IDA
 #Application name of IDA
