--- a/deployment/sandbox-v2/qa.ini
+++ b/deployment/sandbox-v2/qa.ini
@@ -1,6 +1,13 @@
 [console]
 console ansible_user=mosipuser
 
+# On public facing machine
+[nginxserver]
+console ansible_user=mosipuser  
+
+[nfsserver]
+console ansible_user=mosipuser  
+
 # All k8s clusters
 [clusters:children]
 mzcluster
