--- a/deployment/sandbox-v2/playbooks/os-hardening_cluster.yml
+++ b/deployment/sandbox-v2/playbooks/os-hardening_cluster.yml
@@ -23,9 +23,44 @@
             --fetch-remote-resources \
             /usr/share/xml/scap/ssg/content/{{ oscap_policy }}.xml
 
+        - name: remediate openscap
+          command: oscap xccdf eval \
+            --remediate \
+            --profile {{ oscap_profile }} \
+            --results /tmp/oscap-remediate.xml \
+            --fetch-remote-resources \
+            /usr/share/xml/scap/ssg/content/{{ oscap_policy }}.xml \
+            /tmp/oscap.xml
+
+
       always:
-        - name: download report
-          fetch:
+        - name: Check reports directory.
+          stat:
+            path: "{{ install_root }}/{{ sandbox_domain_name }}"
+          register: oscap_report_folder
+
+        - name: "echo if directory already existed"
+          debug:
+            msg: "Report directory already exist"
+          when: oscap_report_folder.stat.exists
+
+        - name: "Create directory if not exists"
+          file:
+            path: "{{ install_root }}/{{ sandbox_domain_name }}"
+            state: directory
+          when: oscap_report_folder.stat.exists == false
+
+        - name: Download report
+          copy:
             src: /tmp/oscap-report.html
-            dest: ../oscap-reports/{{ inventory_hostname }}.html
-            flat: yes
+            dest: "{{ install_root }}/{{ sandbox_domain_name }}/{{ inventory_hostname }}.html"
+            #remote_src: yes
+
+        - name: Zip Reports
+          archive:
+            path: "{{ install_root }}/{{ sandbox_domain_name }}"
+            dest: "{{ install_root }}/{{ sandbox_domain_name }}.zip"
+            format: zip
+
+        - name: Upload Reports
+          shell: 'curl  args: -u ''{{ reporting_user }}:{{ reporting_user_secret}}'' --request POST -F file=@{{ install_root }}/{{ sandbox_domain_name }}.zip -H ''Accept: application/json'' -H ''X-Atlassian-Token: no-check'' --url https://mosip.atlassian.net/wiki/rest/api/content/45285493/child/attachment'
