--- a/deployment/sandbox-v2/playbooks/os-hardening_console.yml
+++ b/deployment/sandbox-v2/playbooks/os-hardening_console.yml
@@ -2,7 +2,7 @@
 - hosts: "{{console}}"
 
   vars:
-    oscap_profile: xccdf_org.ssgproject.content_profile_standard
+    oscap_profile: xccdf_org.ssgproject.content_profile_pci-dss
     oscap_policy: ssg-centos7-ds
 
   tasks:
@@ -16,20 +16,42 @@
 
     - block:
         - name: run openscap
-          become: true
-          become_user: mosipuser
           command: oscap xccdf eval \
             --profile {{ oscap_profile }} \
-            --results-arf /tmp/oscap-arf.xml \
+            --results /tmp/oscap.xml \
             --report /tmp/oscap-report.html \
             --fetch-remote-resources \
             /usr/share/xml/scap/ssg/content/{{ oscap_policy }}.xml
 
+        - name: remediate openscap
+          command: oscap xccdf eval \
+            --remediate \
+            --profile {{ oscap_profile }} \
+            --results /tmp/oscap-remediate.xml \
+            --fetch-remote-resources \
+            /usr/share/xml/scap/ssg/content/{{ oscap_policy }}.xml \
+            /tmp/oscap.xml
+
+
       always:
-        - name: download report
-          become: true
-          become_user: mosipuser
-          fetch:
+        - name: Check reports directory.
+          stat:
+            path: "{{ install_root }}/{{ sandbox_domain_name }}"
+          register: oscap_report_folder
+
+        - name: "echo if directory already existed"
+          debug:
+            msg: "Report directory already exist"
+          when: oscap_report_folder.stat.exists
+
+        - name: "Create directory if not exists"
+          file:
+            path: "{{ install_root }}/{{ sandbox_domain_name }}"
+            state: directory
+          when: oscap_report_folder.stat.exists == false
+
+        - name: Download report
+          copy:
             src: /tmp/oscap-report.html
-            dest: ../oscap-reports/{{ inventory_hostname }}.html
-            flat: yes
+            dest: "{{ install_root }}/{{ sandbox_domain_name }}/{{ inventory_hostname }}.html"
+            #remote_src: yes
