added ignore errors

--- a/deployment/sandbox-v2/playbooks/os-hardening_cluster.yml
+++ b/deployment/sandbox-v2/playbooks/os-hardening_cluster.yml
@@ -31,7 +31,7 @@
             --fetch-remote-resources \
             /usr/share/xml/scap/ssg/content/{{ oscap_policy }}.xml \
             /tmp/oscap.xml
-
+      ignore_errors: yes
 
       always:
         - name: Check reports directory.
