[MOSIP-1803] Admin config map corrected.

--- a/deployment/sandbox-v2/helm/charts/admin/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/values.yaml
@@ -28,5 +28,5 @@ services:
     containerPort: 80
     servicePort: 80
     configName: admin-ui-config # ConfigMap name
-    apiHost: https://{{ .Values.sandboxDomainName }}/
+    apiHost: https://{{ .Values.sandboxDomainName }}/v1/
     ingressPath: /admin-ui
