--- a/deployment/sandbox-v2/playbooks/uninstall-scap.yml
+++ b/deployment/sandbox-v2/playbooks/uninstall-scap.yml
@@ -1,7 +1,7 @@
 ---
-- hosts: "{{scancluster}}"
+- hosts: "{{cluster1}}"
   tasks:
-    - name: install openscap scanner
+    - name: un-install openscap scanner
       package:
         name: "{{ item }}"
         state: absent
