--- a/deployment/sandbox-v2/playbooks/dmzcluster.yml
+++ b/deployment/sandbox-v2/playbooks/dmzcluster.yml
@@ -10,12 +10,12 @@
 - hosts: console
   tasks:
     - name: Deploy kubenetes dashboard in dmzcluster 
-      k8s:
-        state: present
-        src: '{{install_root}}/roles/k8scluster/kubernetes/master/files/dashboard.yml' 
-        kubeconfig: '{{ dmz_kube_config }}'
-        wait: yes
-        wait_timeout: 30 
+      command: 'kubectl --kubeconfig={{ dmz_kube_config }} apply -f {{install_root}}/roles/k8scluster/kubernetes/master/files/dashboard.yml'
+      register: create_result
+      until: create_result.rc == 0
+      retries: 5
+      delay: 2
+      ignore_errors: true
 
     # TODO: Below commands returns -9 code, but does the job. It should return 0 actually.
     - name: Kill any running proxy
